# create-training-dataset-runner

./: DockerfileRunpodOllama  README.md  main.py  preload_model.sh  pyproject.toml  test_inference.py
src/training_dataset/: annotation.py  base_client.py  runpod_client.py  translations.py  utils.py
