[project]
name = "training_dataset"
version = "0.1.0"
description = "Scripts and helpers to create a training dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.31",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training_dataset"]

